# anti-stupid

./: README.md
anti-stupid/: Cargo.toml
anti-stupid/src/: main.rs
examples/: warframe.json
