[package]
name = "anti-stupid"
version = "0.1.0"
authors = ["RaINi_"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", default-features = false, features = ["std", "derive"] }
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
sysinfo = { version = "0.25", default-features = false }

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = false
lto = true
codegen-units = 1
